[package]
name = "gameboy-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.83"
ybc = "0.2"
gloo = "0.8.0"
gameboy-core = { version = "0.1.0", path = "../gameboy-core" }

[dependencies.web-sys]
version = "0.3.60"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
]